# Zadanie2

./: CMakeLists.txt  addDigits.cpp  addDigits.h
.github/workflows/: cmake-single-platform.yml
tests/: tests.cpp
